...
                        Image("retry")
                            .padding(.trailing, 20)
                            .padding(.bottom, 10)
                            .opacity(0.8)
                    }
                    .actionSheet(isPresented: $showActionSheet){
                        ActionSheet(title: Text("Select a method for upload"), message: nil, buttons: [
                            //Button1
                            
                            .default(Text("Camera"), action: {
                                self.showImagePicker = true
                                self.sourceType = .camera
                            }),
                            //Button2
                            .default(Text("Photo Library"), action: {
                                self.showImagePicker = true
                                self.sourceType = .photoLibrary
                            }),
                            
                            //Button3
                            .cancel()
...
                            .shadow(color: Color.lightShadow, radius: 3, x: -2, y: -2)
                        Image("camera")
                    }
                    Button(action: {
                        self.showActionSheet = true
                    }) {
                        Image("upload")
                            .padding(.trailing, 20)
                            .padding(.bottom, 10)
                    }
                    .actionSheet(isPresented: $showActionSheet){
                        ActionSheet(title: Text("Select a method for upload"), message: nil, buttons: [
                            //Button1
...
                                .shadow(color: Color(#colorLiteral(red: 0.7608050108, green: 0.8164883852, blue: 0.9259157777, alpha: 1)), radius: 20, x: 10, y: 10)
                                .shadow(color: Color.white, radius: 20, x: -10, y: -10)
                                .onTapGesture {
                                    self.currentTabTime = "< 5 mins"
                                    self.occupationRate = 1
                                }
                            Text("15 - 30 mins")
                                .font(.system(size: 13.5, weight: .medium, design: .rounded))
                                .foregroundColor(Color.black)
                                .frame(width: 105, height: 42)
                                .background(
                                    ZStack {
                                        Color(#colorLiteral(red: 0.7608050108, green: 0.8164883852, blue: 0.9259157777, alpha: 1))
...
                        DispatchQueue.main.asyncAfter(deadline: .now() + 1) {
                            showUploadImage = false
                        }
                    }, label: {
                        HStack(spacing: 15){
                            Image("add")
                            Text("Add parking spot")
                                .font(.system(size: 16))
                                .foregroundColor(Color.black)
                                .fontWeight(.medium)
                            
                        }
                        .padding(.leading, 30)
...
