...
            if userType == true {
                ZStack {
                    Button(action: {
                        self.showUploadImage = true
                        print("OK")
                    }, label: {
                        Image("plus")
                            .resizable()
                            .renderingMode(.template)
                            .foregroundColor(Color.red)
                            .frame(width: 22, height: 22)
                    })
                    .buttonStyle(GrowingButton3())
...
